--- a/www/templates/scanner.html
+++ b/www/templates/scanner.html
@@ -1,7 +1,7 @@
 <ion-view id="page2">
   <ion-nav-title>Scanner & Search</ion-nav-title>
   <ion-nav-buttons side="right">
-    <button class="button button-calm" ng-click="scanCode()">
+    <button class="button button-deepblue-white icon-left ion-qr-scanner" ng-click="scanCode()">
       SCAN
     </button>
   </ion-nav-buttons>
@@ -10,7 +10,7 @@
 
     <div class="row" ng-show="false">
       <div class="row"  >
-        <div class="col"><img src="{{logoImage}}" style="width: 100%"> <br>  <p ng-bind-html="username"></p></div>
+        <div class="col" style="border-radius: 50%"><img src="{{logoImage}}" style="width: 100%;"> <br>  <p ng-bind-html="username"></p></div>
         <div class="col col-75"><img src="{{backImage}}" style="width: 100%"></div>
       </div>
     </div>
@@ -24,11 +24,12 @@
       </div>
 
     <div class="button-bar">
-      <button id="scanner-button1vin" class="button button-positive  button-block" ng-click="fireOverlay()" ng-show="false">CamerOverlay </button>
-      <button id="scanner-button1" class="button button-positive  button-block" ng-click="scanCode()">Scan VIN & QR Code</button>
+      <button id="scanner-button1" class="button button-positive button-block icon-left ion-qr-scanner" ng-click="scanCode()">Scan VIN & QR Code</button>
     </div>
 
+<!--
     <button id="scanner-button11" class="button button-positive  button-block" ng-click="dealerVault()" ng-show="false">DealerVault</button>
+-->
 
 
     <div class="item item-input-inset">
@@ -53,7 +54,7 @@
         <input type="text" placeholder="Search New" ng-model="searchCarsParams.termNEW">
 
       </label>
-      <button id="scanner-button4" class="button button-positive  button-block" ng-click="searchNew(searchCarsParams.termNEW)">Search New</button>
+      <button id="scanner-button4" class="button button-positive button-block  icon-left ion-search" ng-click="searchNew(searchCarsParams.termNEW)">Search New</button>
 
 
     <label class="item item-input" id="scanner-input4">
@@ -77,7 +78,7 @@
         </label>
       </li>
     </ul>
-    <button id="scanner-button5" class="button button-positive  button-block" ng-click="searchUsed(searchCarsParams.term)">Search Used</button>
+    <button id="scanner-button5" class="button button-positive  button-block icon-left ion-search" ng-click="searchUsed(searchCarsParams.term)">Search Used</button>
 
     <div class="item item-divider">
      Latest VINs:
